# macbook-init

./: .coverage  .gitignore  .pyre_configuration.local  LICENSE  README.md  makefile  pyproject.toml  tasks.json  tasks_test.json
scripts/: 01_install_homebrew.sh  02_install_ohmyzsh.sh  03_install_ohmyzsh_plugins.sh  04_install_dir_bookmark.sh  07_install_nvim.sh  08_install_nvim_config.sh  09_install_tmux_plugins.sh
scripts/tests/: 02_test.sh
src/: main.py
src/lib/: bash.py  dmg.py
src/lib/tui/: __init__.py  dialog.py  fp.py
src/tests/: conftest.py  test_integration.py  test_main.py
src/tests/lib/: test_bash.py  test_dmg.py
src/utils/: errors.py
